# hello-py

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post_create.sh  postcreate.sh
.github/workflows/: pr-check.yml
src/hello_py/: main.py
