[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-py"
version = "0.1.0"
description = "A simple Python hello world project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
hello-py = "hello_py.main:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "ty==0.0.31",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = []
